# nomad_auto_upload_tables

./: LICENSE  README.md  pyproject.toml
src/nomad_auto_upload_tables/: ai_guessing.py  guessing.py  tabular_guess_build.py
src/nomad_auto_upload_tables/parsers/: __init__.py  tabular_guess.py
src/nomad_auto_upload_tables/schema_packages/: __init__.py  tabular_guess.py
tests/: test_ai_guessing.py  test_guessing.py  test_tabular_guess.py
tests/data/: data_test.csv  sample.csv  sample.xlsx
